--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
-body {
-    background-color: red;
+html{
+    font-size: 62.5%; 
+}
+*,*::after, *::before{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+.banner{
+    text-align: center;
+    margin: 0 auto;
+    background-color:	#B22222;
+    color: white;
+    height: 20vh;
+    font-size: 4rem;
+    text-transform: uppercase;
+    letter-spacing: 1 rem;
+}
+.user-input{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#hero-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 60vh;
+
+}
+.hero-form-input{
+
 }
