--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html{
 .banner{
     text-align: center;
     margin: 0 auto;
-    background-color:	#B22222;
+    background-color:#B22222;
     color: white;
     height: 20vh;
     font-size: 4rem;
@@ -29,8 +29,61 @@ html{
     justify-content: space-around;
     align-items: center;
     height: 60vh;
-
+    font-size: 2.2rem;
 }
 .hero-form-input{
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    height: 10vh;
+}
+.text-box {
+    height: 2.5rem;
+    width: 20rem;
+}
+.btn, .btn:link, .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4.0rem;
+    display: inline-block;
+    margin: 1rem;
+    font-size: 2rem;
+    border-radius: 10rem;
+    transition: all .2s;
+    position: relative;
+    animation: moveInBottom .5s ease-out .75s;
+    animation-fill-mode: backwards;
+}
+.btn:hover{
+    transform: translateY(-.3rem);
+    box-shadow: 0 1.0rem 2rem rgba(0,0,0.2);
+    
+}
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0.2);
+}
+.btn-red{
+    background-color:#B22222;
+    color: white;
+}
+.display{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80vw;
+    margin: 1rem auto;
+}
+.display-avenger{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 10rem;
+    font-size: 2.2rem;
+    width: 100%;
+}
+.display-image img {
+    height: 9rem;
 }
